i updated index.html and style.css

--- a/index.html
+++ b/index.html
@@ -2,26 +2,26 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My test page</title>
+    <title>JAZZ!</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
     <link href="styles/style.css" rel="stylesheet" type="text/css">
     <script src="scripts/main.js"></script>
   </head>
   <body>
-    <h1>Tristan's Cool Webpage</h1>
+    <h1>JAZZ'S SUPER FUN WEBSITE!</h1>
     <img src="images/headshot.jpg" alt="Headshot of Tristan: a person with long hair who is smiling slightly.">
 
-    <p>Tristan is a fan of:</p>
+    <p>JAZZ ENJOYS:</p>
 
     <ul> <!-- changed to list in the tutorial -->
-      <li>basketball</li>
-      <li>swimming</li>
-      <li>cycling</li>
+      <li>snails</li>
+      <li>rats holding food in their mouths</li>
+      <li>smiley faces like this :)</li>
     </ul>
 
-    <p>And they love to share these passions with other like-minded folks.</p>
+    <p>.. also a big libra!</p>
 
     <p>Visit their <a href="https://github.com/isangieri">Github page</a> to learn even more about the cool stuff they build.</p>
-  <button>Change user</button>
+  <button>CLICK FOR A FUN TIME</button>
   </body>
 </html>
