add mouse picture, update css, update html

--- a/index.html
+++ b/index.html
@@ -8,10 +8,20 @@
     <script src="scripts/main.js"></script>
   </head>
   <body>
-    <h1>JAZZ'S SUPER FUN WEBSITE!</h1>
-    <img src="images/headshot.jpg" alt="Headshot of Tristan: a person with long hair who is smiling slightly.">
 
-    <p>JAZZ ENJOYS:</p>
+    <div>
+
+    <h1>JAZZ'S SUPER FUN WEBSITE!</h1>
+
+    </div>
+
+    <img src="images/mouse.jpg" alt="photo: blue mouse that jazz likes">
+
+    <div>
+
+    <h2>JAZZ ENJOYS:</h2>
+
+    <br>
 
     <ul> <!-- changed to list in the tutorial -->
       <li>snails</li>
@@ -19,9 +29,18 @@
       <li>smiley faces like this :)</li>
     </ul>
 
-    <p>.. also a big libra!</p>
+    <br>
 
-    <p>Visit their <a href="https://github.com/isangieri">Github page</a> to learn even more about the cool stuff they build.</p>
-  <button>CLICK FOR A FUN TIME</button>
+    <p>.. and they're also a big libra!</p>
+
+    </div>
+    
+    <div>
+
+    <p>CHECK OUT NASA'S <a href="https://apod.nasa.gov/apod/astropix.html">ASTRONOMY PICTURE OF THE DAY</a>!</p>
+    <button>THIS BUTTON WILL DO SOMETHING SOON</button>
+
+    </div>
+
   </body>
 </html>
