i updated css and html and js

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
     <p>.. and they're also a big libra!</p>
 
     </div>
-    
-    <div>
+
+    <div id = "willemSucksDiv">
 
     <p>CHECK OUT NASA'S <a href="https://apod.nasa.gov/apod/astropix.html">ASTRONOMY PICTURE OF THE DAY</a>!</p>
-    <button>THIS BUTTON WILL DO SOMETHING SOON</button>
+    <button onclick = "willemSucks()">willem click this button</button>
 
     </div>
 
